# writer-model-garden

./: .gitignore  Dockerfile  hf_transformers_lazy_download.patch  main.py  pyproject.toml  readme.md  server.py
notebooks/: pytorch_camel.ipynb  pytorch_palmyra_base.ipynb  pytorch_palmyra_instruct.ipynb  pytorch_palmyra_large.ipynb  pytorch_palmyra_med.ipynb
notebooks/docs/: camel.md  palmyra_base.md  palmyra_instruct.md  palmyra_large.md  palmyra_med.md
